# rust-websocket-elm-prototype

./: .env  .gitignore  Cargo.toml  README.md  elm-package.json
client/: Main.elm
src/: main.rs
static/: index.html
static/js/: app.js  client.js
