[package]
name = "rewp"
version = "0.1.0"
authors = ["Daan van Berkel <daan.v.berkel.1980@gmail.com>"]

[dependencies]
log = "0.3.8"
simplelog = "0.4.2"
dotenv = "0.9.0" 

[dependencies.iron]
version = "*"

[dependencies.staticfile]
version = "*"

[dependencies.router]
version = "*"

[dependencies.mount]
git = "https://github.com/iron/mount.git"

[dependencies.logger]
git = "https://github.com/iron/logger.git"

